Command Pattern and Configuration Staging: Add command syntax and execution structure for router CLI commands